fix: `BannerText` alignment and border-radius

--- a/packages/ui/src/components/organisms/BannerNewsletter/styles.scss
+++ b/packages/ui/src/components/organisms/BannerNewsletter/styles.scss
@@ -1,8 +1,4 @@
 [data-fs-banner-text-newsletter] {
-  [data-fs-banner-text] {
-    border-radius: var(--fs-border-radius);
-  }
-
   @include media(">=notebook") {
     display: grid;
     grid-template-columns: 1fr 1fr;
