--- a/packages/ui/src/components/organisms/BannerText/styles.scss
+++ b/packages/ui/src/components/organisms/BannerText/styles.scss
@@ -6,6 +6,7 @@
   // Default properties
   --fs-banner-text-padding-mobile                : var(--fs-spacing-6) 5%;
   --fs-banner-text-padding-desktop               : var(--fs-spacing-9) 10%;
+  --fs-banner-text-border-radius                 : var(--fs-border-radius);
 
   // Button Link
   --fs-banner-text-button-link-min-width         : 11.25rem;
@@ -41,8 +42,10 @@
   // Structural Styles
   // --------------------------------------------------------
 
+  width: 100%;
   height: 100%;
   text-align: center;
+  border-radius: var(--fs-banner-text-border-radius);
 
   [data-fs-banner-text-content] {
     display: flex;
